--- a/position-statement.html
+++ b/position-statement.html
@@ -132,7 +132,7 @@
         </p>
       </div>
       
-    <p><a href="praxis.html">← Back to Home</a></p>
+    <p><a href="index.html">← Back to Home</a></p>
   </div>
 
   <script>
