--- a/praxis-i.html
+++ b/praxis-i.html
@@ -21,6 +21,6 @@
 <body>
   <h1>Praxis I</h1>
   <p>Your content goes here.</p>
-  <p><a href="praxis.html">← Back to Home</a></p>
+  <p><a href="index.html">← Back to Home</a></p>
 </body>
 </html>
