--- a/position-statement.html
+++ b/position-statement.html
@@ -12,7 +12,7 @@
       font-family: 'Orbitron', sans-serif;
       background: black;
       color: #ffe81f;
-      overflow: hidden;
+      overflow-y: auto;
     }
 
     .star-wars,
