--- a/position-statement.html
+++ b/position-statement.html
@@ -5,98 +5,96 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Position Statement</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: black;
-      color: #ffe81f;
-      overflow-y: auto;
-    }
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Orbitron', sans-serif;
+    background: black;
+    color: #ffe81f;
+    overflow-x: hidden; /* no side scroll */
+  }
 
-    .star-wars,
-    .fade-in-content {
-      background: url('https://lumiere-a.akamaihd.net/v1/images/star-wars-backgrounds-25_bc15ec98.jpeg') no-repeat center center;
-      background-size: cover;
-    }
+  .star-wars,
+  .fade-in-content {
+    background: url('https://lumiere-a.akamaihd.net/v1/images/star-wars-backgrounds-25_bc15ec98.jpeg') no-repeat center center;
+    background-size: cover;
+  }
 
-    .star-wars {
-      perspective: 400px;
-      height: 100vh;
-      overflow: hidden;
-      position: relative;
-    }
+  .star-wars {
+    perspective: 400px;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+  }
 
-    .crawl {
-      position: absolute;
+  .crawl {
+    position: absolute;
+    top: 100vh;
+    width: 100%;
+    transform-origin: 50% 100%;
+    animation: crawl 20s linear forwards;
+    text-align: center;
+  }
+
+  @keyframes crawl {
+    0% {
       top: 100vh;
-      width: 100%;
-      transform-origin: 50% 100%;
-      animation: crawl 20s linear forwards;
-      text-align: center;
+      transform: rotateX(20deg) translateZ(0);
     }
-    .fade-in-content p {
-  margin: 20px auto 30px auto; /* Adds more space between paragraphs */
-  line-height: 1.6;
-}
-
-
-    @keyframes crawl {
-      0% {
-        top: 100vh;
-        transform: rotateX(20deg) translateZ(0);
-      }
-      100% {
-        top: -200vh;
-        transform: rotateX(25deg) translateZ(-300px);
-      }
+    100% {
+      top: -200vh;
+      transform: rotateX(25deg) translateZ(-300px);
     }
+  }
 
-    .fade-in-content {
-      visibility: hidden;
-      opacity: 0;
-      transition: opacity 1s ease;
-      color: #ffe81f;
-      text-shadow: 2px 2px 4px #000;
-      padding: 40px;
-      box-sizing: border-box;
-      height: 100vh;
-      overflow-y: auto;
-    }
+  .fade-in-content {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1s ease;
+    color: #ffe81f;
+    text-shadow: 2px 2px 4px #000;
+    padding: 40px;
+    box-sizing: border-box;
+    max-width: 900px;
+    margin: 0 auto;
+  }
 
-    .fade-in-content h1 {
-      text-align: center;
-      font-size: 3em;
-    }
+  .fade-in-content h1 {
+    text-align: center;
+    font-size: 3em;
+  }
 
-    .fade-in-content p,
-    .fade-in-content a {
-      text-align: center;
-      font-size: 1.2em;
-      max-width: 800px;
-      margin: 0 auto;
-    }
+  .fade-in-content p,
+  .fade-in-content a {
+    text-align: center;
+    font-size: 1.2em;
+    max-width: 800px;
+    margin: 20px auto;
+    line-height: 1.6;
+  }
 
-    .video-container {
-      text-align: center;
-      margin: 40px 0;
-    }
+  .video-container {
+    text-align: center;
+    margin: 40px 0;
+  }
 
-    a {
-      color: #ffffff;
-      text-decoration: none;
-      font-weight: bold;
-      display: block;
-      margin-top: 30px;
-    }
+  a {
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
+    display: block;
+    margin-top: 30px;
+  }
 
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  a:hover {
+    text-decoration: underline;
+  }
+</style>
+
 </head>
 <body>
+  <body style="overflow: hidden;">
   <nav style="background-color: black; padding: 10px; text-align: center; border-bottom: 2px dashed #ffe81f;">
     <a href="index.html" style="color: #ffe81f; margin: 0 15px; font-weight: bold;">Home</a>
     <a href="position-statement.html" style="color: #ffe81f; margin: 0 15px; font-weight: bold;">Position Statement</a>
