--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <h2>About This Portfolio</h2>
     <p>Throughout this journey, I’ve explored real-world challenges, from stabilizing wobbly chairs to creating tools that help beginner bonsai caretakers. This site is a reflection of the values I bring to engineering: empathy, adaptability, teamwork, and curiosity.</p>
 
-    <h2>Reflections from Studio</h2>
+    <h2>Reflections from First Studio</h2>
     <div class="reflection-item">
       <strong>Engineering is:</strong>
       <span class="indent">The process of creating a product that is beneficial to a group of stakeholders and has undergone thoughtful iteration.</span>
