--- a/references.html
+++ b/references.html
@@ -6,67 +6,60 @@
   <title>References</title>
   <style>
     body {
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      background-color: #ffffff;
-      color: #333333;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav {
-      background-color: #004080;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: center;
-      gap: 25px;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #ffffff;
-      font-weight: bold;
-      font-size: 1.1em;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      max-width: 900px;
-      margin: 50px auto;
-      padding: 0 20px;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      padding: 40px;
+      line-height: 1.6;
     }
 
     h1 {
       text-align: center;
       color: #004080;
-      font-size: 2.5em;
       border-bottom: 2px solid #004080;
       padding-bottom: 10px;
-      margin-bottom: 40px;
     }
 
-    .references {
-      line-height: 1.8;
-      font-size: 1.05em;
+    ul {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0;
+      list-style: none;
     }
 
-    .references p {
+    li {
       margin-bottom: 20px;
     }
 
-    .references a {
+    a {
       color: #004080;
+      text-decoration: none;
     }
 
-    .references a:hover {
+    a:hover {
+      text-decoration: underline;
+    }
+
+    nav {
+      background-color: #004080;
+      padding: 10px;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
-
   <nav>
     <a href="index.html">Home</a>
     <a href="position-statement.html">Position Statement</a>
@@ -76,28 +69,29 @@
     <a href="references.html">References</a>
   </nav>
 
-  <main>
-    <h1>References</h1>
-    <div class="references">
-      <p>Onshape. (n.d.). <i>Onshape</i>. Retrieved April 11, 2025, from <a href="https://www.onshape.com/en/">https://www.onshape.com/en/</a></p>
+  <h1>References</h1>
+  <ul>
+    <li>Engineering Portfolio Team. (2023). <em>Praxis II – Bonsai Bloom One Pager</em>. <a href="https://docs.google.com/document/d/16QwJ1fKK7Hpe9k0Xw2jf1vasHyXraO4Ru0bgAZ81wZk/edit?usp=sharing" target="_blank">Google Docs</a></li>
 
-      <p>The MathWorks, Inc. (n.d.). <i>MATLAB</i>. Retrieved April 11, 2025, from <a href="https://www.mathworks.com/products/matlab.html">https://www.mathworks.com/products/matlab.html</a></p>
+    <li>Engineering Portfolio Team. (2023). <em>Praxis II Presentation Slides</em>. <a href="https://docs.google.com/presentation/d/1vrzuzs8sd2ZqmtcStYENhg1VXnEFJNyisIDuqel9_GQ/edit?usp=sharing" target="_blank">Google Slides</a></li>
 
-      <p>manerik4-PA. (n.d.). <i>Google Docs</i>. Retrieved April 11, 2025, from <a href="https://docs.google.com/document/d/16QwJ1fKK7Hpe9k0Xw2jf1vasHyXraO4Ru0bgAZ81wZk/edit?usp=sharing">https://docs.google.com/document/d/16QwJ1fKK7Hpe9k0Xw2jf1vasHyXraO4Ru0bgAZ81wZk</a></p>
+    <li>Engineering Portfolio Team. (2023). <em>Praxis II Reflection</em>. <a href="https://docs.google.com/document/d/1HGbESo7lcLSu-6M9gjEnBODLwLjEtpG8EHbFQLbj-bY/edit?usp=sharing" target="_blank">Google Docs</a></li>
 
-      <p>Showcase Slideshow. (n.d.). <i>Google Slides</i>. Retrieved April 11, 2025, from <a href="https://docs.google.com/presentation/d/1vrzuzs8sd2ZqmtcStYENhg1VXnEFJNyisIDuqel9_GQ/edit?usp=sharing">https://docs.google.com/presentation/d/1vrzuzs8sd2ZqmtcStYENhg1VXnEFJNyisIDuqel9_GQ</a></p>
+    <li>Onshape. (2023). <em>Onshape CAD Software</em>. Retrieved from <a href="https://www.onshape.com/en/" target="_blank">https://www.onshape.com/en/</a></li>
 
-      <p>CIV102 Project Team 104 Design Report. (n.d.). <i>Google Docs</i>. Retrieved April 11, 2025, from <a href="https://docs.google.com/document/d/1WwfOFgsPza99H-Qcsi4urJvXX84KJgY8TIAaxPxGrwM/edit?usp=sharing">https://docs.google.com/document/d/1WwfOFgsPza99H-Qcsi4urJvXX84KJgY8TIAaxPxGrwM</a></p>
+    <li>MathWorks. (2023). <em>MATLAB Software</em>. Retrieved from <a href="https://www.mathworks.com/products/matlab.html" target="_blank">https://www.mathworks.com/products/matlab.html</a></li>
 
-      <p>CIV102 Project Team 104 Engineering Assembly. (n.d.). <i>Google Docs</i>. Retrieved April 11, 2025, from <a href="https://docs.google.com/document/d/1NoNKX7sQ9tpmF8p2Tb1BmkcmbvKHvQkyCFd9dffRwzo/edit?usp=sharing">https://docs.google.com/document/d/1NoNKX7sQ9tpmF8p2Tb1BmkcmbvKHvQkyCFd9dffRwzo</a></p>
+    <li>Engineering Portfolio Team. (2023). <em>CIV Bridge One Pager</em>. <a href="https://docs.google.com/document/d/1WwfOFgsPza99H-Qcsi4urJvXX84KJgY8TIAaxPxGrwM/edit?usp=sharing" target="_blank">Google Docs</a></li>
 
-      <p>Engineering Toolbox. (n.d.). <i>Metal alloys - Densities</i>. Retrieved April 11, 2025, from <a href="https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html">https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html</a></p>
+    <li>Engineering Portfolio Team. (2023). <em>SCAMPER Analysis and Studio</em>. <a href="https://docs.google.com/document/d/1NoNKX7sQ9tpmF8p2Tb1BmkcmbvKHvQkyCFd9dffRwzo/edit?usp=sharing" target="_blank">Google Docs</a></li>
 
-      <p>MakeItFrom.com. (n.d.). <i>Polyurethane Foam - Material Properties</i>. Retrieved April 11, 2025, from <a href="https://www.makeitfrom.com/material-properties/Polyurethane-Foam">https://www.makeitfrom.com/material-properties/Polyurethane-Foam</a></p>
+    <li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2023). <em>Chair Stabilizer Design: Praxis I Final Report</em>. University of Toronto. <a href="https://docs.google.com/document/d/1_hZpWU4crS2dxz7QHWSnr3S1XzM_8dO3QSWlTuOS1IE/edit?usp=sharing" target="_blank">Google Docs</a></li>
 
-      <p>Industrial Minerals Handbook. (n.d.). <i>Clay density properties</i>. Reference used for general approximation of modeling clay density in engineering analysis.</p>
-    </div>
-  </main>
+    <li>Engineering Toolbox. (2023). <em>Steel Density Reference</em>. <a href="https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html" target="_blank">https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html</a></li>
 
+    <li>MakeItFrom. (2023). <em>Foam Density Reference</em>. <a href="https://www.makeitfrom.com/material-properties/Polyurethane-Foam" target="_blank">https://www.makeitfrom.com/material-properties/Polyurethane-Foam</a></li>
+
+    <li>Industrial Minerals Handbook. (2023). <em>Clay Density Reference</em>.</li>
+  </ul>
 </body>
 </html>
