--- a/references.html
+++ b/references.html
@@ -6,60 +6,76 @@
   <title>References</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
-      padding: 40px;
-      line-height: 1.6;
-    }
-
-    h1 {
-      text-align: center;
-      color: #004080;
-      border-bottom: 2px solid #004080;
-      padding-bottom: 10px;
-    }
-
-    ul {
-      max-width: 900px;
-      margin: 40px auto;
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f7fb;
+      color: #222;
+      margin: 0;
       padding: 0;
-      list-style: none;
     }
 
-    li {
-      margin-bottom: 20px;
+    header {
+      background-color: #003366;
+      padding: 30px 0;
+      text-align: center;
+      border-bottom: 4px solid #005599;
     }
 
-    a {
-      color: #004080;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
+    header h1 {
+      font-size: 2.5em;
+      color: white;
+      margin: 0;
     }
 
     nav {
-      background-color: #004080;
-      padding: 10px;
+      background-color: #e0e0e0;
+      padding: 12px;
       text-align: center;
-      margin-bottom: 40px;
+      border-bottom: 2px solid #ccc;
     }
 
     nav a {
-      color: white;
-      text-decoration: none;
       margin: 0 15px;
+      color: #003366;
+      text-decoration: none;
       font-weight: bold;
+      font-size: 1.1em;
     }
 
     nav a:hover {
       text-decoration: underline;
     }
+
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+
+    li {
+      margin-bottom: 20px;
+      line-height: 1.6;
+    }
+
+    a {
+      color: #003366;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
+
+  <header>
+    <h1>References</h1>
+  </header>
+
   <nav>
     <a href="index.html">Home</a>
     <a href="position-statement.html">Position Statement</a>
@@ -69,29 +85,31 @@
     <a href="references.html">References</a>
   </nav>
 
-  <h1>References</h1>
-  <ul>
-    <li>Engineering Portfolio Team. (2023). <em>Praxis II – Bonsai Bloom One Pager</em>. <a href="https://docs.google.com/document/d/16QwJ1fKK7Hpe9k0Xw2jf1vasHyXraO4Ru0bgAZ81wZk/edit?usp=sharing" target="_blank">Google Docs</a></li>
+  <main>
+    <ul>
+      <li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2023). <em>Chair Stabilizer Design: Praxis I Final Report</em>. University of Toronto. <a href="https://docs.google.com/document/d/1_hZpWU4crS2dxz7QHWSnr3S1XzM_8dO3QSWlTuOS1IE/edit?usp=sharing" target="_blank">Link</a></li>
 
-    <li>Engineering Portfolio Team. (2023). <em>Praxis II Presentation Slides</em>. <a href="https://docs.google.com/presentation/d/1vrzuzs8sd2ZqmtcStYENhg1VXnEFJNyisIDuqel9_GQ/edit?usp=sharing" target="_blank">Google Slides</a></li>
+      <li>Process Analysis. (2023). <em>Gautam Manerikar – Process Analysis</em>. <a href="https://docs.google.com/document/d/16QwJ1fKK7Hpe9k0Xw2jf1vasHyXraO4Ru0bgAZ81wZk/edit?usp=sharing" target="_blank">Link</a></li>
 
-    <li>Engineering Portfolio Team. (2023). <em>Praxis II Reflection</em>. <a href="https://docs.google.com/document/d/1HGbESo7lcLSu-6M9gjEnBODLwLjEtpG8EHbFQLbj-bY/edit?usp=sharing" target="_blank">Google Docs</a></li>
+      <li>Engineering Portfolio Team. (2023). <em>Praxis II Showcase Slides</em>. <a href="https://docs.google.com/presentation/d/1vrzuzs8sd2ZqmtcStYENhg1VXnEFJNyisIDuqel9_GQ/edit?usp=sharing" target="_blank">Link</a></li>
 
-    <li>Onshape. (2023). <em>Onshape CAD Software</em>. Retrieved from <a href="https://www.onshape.com/en/" target="_blank">https://www.onshape.com/en/</a></li>
+      <li>Engineering Portfolio Team. (2023). <em>Praxis II Showcase</em>. <a href="https://docs.google.com/document/d/1HGbESo7lcLSu-6M9gjEnBODLwLjEtpG8EHbFQLbj-bY/edit?usp=sharing" target="_blank">Link</a></li>
 
-    <li>MathWorks. (2023). <em>MATLAB Software</em>. Retrieved from <a href="https://www.mathworks.com/products/matlab.html" target="_blank">https://www.mathworks.com/products/matlab.html</a></li>
+      <li>Engineering Portfolio Team. (2023). <em>CIV102 Project Team 104 Design Report</em>. <a href="https://docs.google.com/document/d/1WwfOFgsPza99H-Qcsi4urJvXX84KJgY8TIAaxPxGrwM/edit?usp=sharing" target="_blank">Link</a></li>
 
-    <li>Engineering Portfolio Team. (2023). <em>CIV Bridge One Pager</em>. <a href="https://docs.google.com/document/d/1WwfOFgsPza99H-Qcsi4urJvXX84KJgY8TIAaxPxGrwM/edit?usp=sharing" target="_blank">Google Docs</a></li>
+      <li>Engineering Portfolio Team. (2023). <em>CIV102 Project Team 104 Engineering Assembly</em>. <a href="https://docs.google.com/document/d/1NoNKX7sQ9tpmF8p2Tb1BmkcmbvKHvQkyCFd9dffRwzo/edit?usp=sharing" target="_blank">Link</a></li>
 
-    <li>Engineering Portfolio Team. (2023). <em>SCAMPER Analysis and Studio</em>. <a href="https://docs.google.com/document/d/1NoNKX7sQ9tpmF8p2Tb1BmkcmbvKHvQkyCFd9dffRwzo/edit?usp=sharing" target="_blank">Google Docs</a></li>
+      <li>Onshape. (2023). <em>Onshape CAD Software</em>. Retrieved from <a href="https://www.onshape.com/en/" target="_blank">https://www.onshape.com/en/</a></li>
 
-    <li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2023). <em>Chair Stabilizer Design: Praxis I Final Report</em>. University of Toronto. <a href="https://docs.google.com/document/d/1_hZpWU4crS2dxz7QHWSnr3S1XzM_8dO3QSWlTuOS1IE/edit?usp=sharing" target="_blank">Google Docs</a></li>
+      <li>MathWorks. (2023). <em>MATLAB Software</em>. Retrieved from <a href="https://www.mathworks.com/products/matlab.html" target="_blank">https://www.mathworks.com/products/matlab.html</a></li>
 
-    <li>Engineering Toolbox. (2023). <em>Steel Density Reference</em>. <a href="https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html" target="_blank">https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html</a></li>
+      <li>Engineering Toolbox. (2023). <em>Steel Density Reference</em>. Retrieved from <a href="https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html" target="_blank">https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html</a></li>
 
-    <li>MakeItFrom. (2023). <em>Foam Density Reference</em>. <a href="https://www.makeitfrom.com/material-properties/Polyurethane-Foam" target="_blank">https://www.makeitfrom.com/material-properties/Polyurethane-Foam</a></li>
+      <li>MakeItFrom. (2023). <em>Foam Density Reference</em>. Retrieved from <a href="https://www.makeitfrom.com/material-properties/Polyurethane-Foam" target="_blank">https://www.makeitfrom.com/material-properties/Polyurethane-Foam</a></li>
 
-    <li>Industrial Minerals Handbook. (2023). <em>Clay Density Reference</em>.</li>
-  </ul>
+      <li>Industrial Minerals Handbook. (2023). <em>Clay Density Reference</em>.</li>
+    </ul>
+  </main>
+
 </body>
 </html>
