--- a/references.html
+++ b/references.html
@@ -6,76 +6,60 @@
   <title>References</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f4f7fb;
-      color: #222;
-      margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      padding: 40px;
+      line-height: 1.6;
     }
 
-    header {
-      background-color: #003366;
-      padding: 30px 0;
+    h1 {
       text-align: center;
-      border-bottom: 4px solid #005599;
-    }
-
-    header h1 {
-      font-size: 2.5em;
-      color: white;
-      margin: 0;
-    }
-
-    nav {
-      background-color: #e0e0e0;
-      padding: 12px;
-      text-align: center;
-      border-bottom: 2px solid #ccc;
-    }
-
-    nav a {
-      margin: 0 15px;
-      color: #003366;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 1.1em;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
+      color: #004080;
+      border-bottom: 2px solid #004080;
+      padding-bottom: 10px;
     }
 
     ul {
-      list-style-type: none;
-      padding-left: 0;
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0;
+      list-style: none;
     }
 
     li {
       margin-bottom: 20px;
-      line-height: 1.6;
     }
 
     a {
-      color: #003366;
+      color: #004080;
+      text-decoration: none;
     }
 
     a:hover {
       text-decoration: underline;
     }
+
+    nav {
+      background-color: #004080;
+      padding: 10px;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-
-  <header>
-    <h1>References</h1>
-  </header>
-
   <nav>
     <a href="index.html">Home</a>
     <a href="position-statement.html">Position Statement</a>
@@ -85,9 +69,9 @@
     <a href="references.html">References</a>
   </nav>
 
-  <main>
-    <ul>
-      <li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2023). <em>Chair Stabilizer Design: Praxis I Final Report</em>. University of Toronto. <a href="https://docs.google.com/document/d/1_hZpWU4crS2dxz7QHWSnr3S1XzM_8dO3QSWlTuOS1IE/edit?usp=sharing" target="_blank">Link</a></li>
+  <h1>References</h1>
+  <ul>
+    <li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2023). <em>Chair Stabilizer Design: Praxis I Final Report</em>. University of Toronto. <a href="https://docs.google.com/document/d/1_hZpWU4crS2dxz7QHWSnr3S1XzM_8dO3QSWlTuOS1IE/edit?usp=sharing" target="_blank">Link</a></li>
 
       <li>Process Analysis. (2023). <em>Gautam Manerikar – Process Analysis</em>. <a href="https://docs.google.com/document/d/16QwJ1fKK7Hpe9k0Xw2jf1vasHyXraO4Ru0bgAZ81wZk/edit?usp=sharing" target="_blank">Link</a></li>
 
@@ -108,8 +92,6 @@
       <li>MakeItFrom. (2023). <em>Foam Density Reference</em>. Retrieved from <a href="https://www.makeitfrom.com/material-properties/Polyurethane-Foam" target="_blank">https://www.makeitfrom.com/material-properties/Polyurethane-Foam</a></li>
 
       <li>Industrial Minerals Handbook. (2023). <em>Clay Density Reference</em>.</li>
-    </ul>
-  </main>
-
+  </ul>
 </body>
 </html>
