--- a/references.html
+++ b/references.html
@@ -72,6 +72,7 @@
   <h1>References</h1>
   <ul>
     <li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2023). <em>Chair Stabilizer Design: Praxis I Final Report</em>. University of Toronto. <a href="https://docs.google.com/document/d/1_hZpWU4crS2dxz7QHWSnr3S1XzM_8dO3QSWlTuOS1IE/edit?usp=sharing" target="_blank">Link</a></li>
+<li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2025). <em>Design Brief</em>. Retrieved April 11, 2025, from <a href="https://docs.google.com/document/d/1gazlKdvcPmFJfD1fP-RULMTbso5dI0plMK3S8OgqOkg/edit?usp=sharing" target="_blank">https://docs.google.com/document/d/1gazlKdvcPmFJfD1fP-RULMTbso5dI0plMK3S8OgqOkg/edit?usp=sharing</a></li>
 
       <li>Process Analysis. (2023). <em>Gautam Manerikar – Process Analysis</em>. <a href="https://docs.google.com/document/d/16QwJ1fKK7Hpe9k0Xw2jf1vasHyXraO4Ru0bgAZ81wZk/edit?usp=sharing" target="_blank">Link</a></li>
 
