--- a/references.html
+++ b/references.html
@@ -71,28 +71,28 @@
 
   <h1>References</h1>
   <ul>
-    <li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2023). <em>Chair Stabilizer Design: Praxis I Final Report</em>. University of Toronto. <a href="https://docs.google.com/document/d/1_hZpWU4crS2dxz7QHWSnr3S1XzM_8dO3QSWlTuOS1IE/edit?usp=sharing" target="_blank">Link</a></li>
-<li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2025). <em>Design Brief</em>. Retrieved April 11, 2025, from <a href="https://docs.google.com/document/d/1gazlKdvcPmFJfD1fP-RULMTbso5dI0plMK3S8OgqOkg/edit?usp=sharing" target="_blank">https://docs.google.com/document/d/1gazlKdvcPmFJfD1fP-RULMTbso5dI0plMK3S8OgqOkg/edit?usp=sharing</a></li>
+    <li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2024). <em>Chair Stabilizer Design: Praxis I Final Report</em>. University of Toronto. <a href="https://docs.google.com/document/d/1_hZpWU4crS2dxz7QHWSnr3S1XzM_8dO3QSWlTuOS1IE/edit?usp=sharing" target="_blank">Link</a></li>
+<li>Zhang, R., Liu, A., Ishak, G., & Manerikar, G. (2024). <em>Design Brief</em>. Retrieved April 11, 2025, from <a href="https://docs.google.com/document/d/1gazlKdvcPmFJfD1fP-RULMTbso5dI0plMK3S8OgqOkg/edit?usp=sharing" target="_blank">Link</a></li>
 
-      <li>Process Analysis. (2023). <em>Gautam Manerikar – Process Analysis</em>. <a href="https://docs.google.com/document/d/16QwJ1fKK7Hpe9k0Xw2jf1vasHyXraO4Ru0bgAZ81wZk/edit?usp=sharing" target="_blank">Link</a></li>
+      <li>Process Analysis. (2024). <em>Gautam Manerikar – Process Analysis</em>. <a href="https://docs.google.com/document/d/16QwJ1fKK7Hpe9k0Xw2jf1vasHyXraO4Ru0bgAZ81wZk/edit?usp=sharing" target="_blank">Link</a></li>
 
-      <li>Engineering Portfolio Team. (2023). <em>Praxis II Showcase Slides</em>. <a href="https://docs.google.com/presentation/d/1vrzuzs8sd2ZqmtcStYENhg1VXnEFJNyisIDuqel9_GQ/edit?usp=sharing" target="_blank">Link</a></li>
+      <li>Engineering Portfolio Team. (2025). <em>Praxis II Showcase Slides</em>. <a href="https://docs.google.com/presentation/d/1vrzuzs8sd2ZqmtcStYENhg1VXnEFJNyisIDuqel9_GQ/edit?usp=sharing" target="_blank">Link</a></li>
 
-      <li>Engineering Portfolio Team. (2023). <em>Praxis II Showcase</em>. <a href="https://docs.google.com/document/d/1HGbESo7lcLSu-6M9gjEnBODLwLjEtpG8EHbFQLbj-bY/edit?usp=sharing" target="_blank">Link</a></li>
+      <li>Engineering Portfolio Team. (2025). <em>Praxis II Showcase</em>. <a href="https://docs.google.com/document/d/1HGbESo7lcLSu-6M9gjEnBODLwLjEtpG8EHbFQLbj-bY/edit?usp=sharing" target="_blank">Link</a></li>
 
-      <li>Engineering Portfolio Team. (2023). <em>CIV102 Project Team 104 Design Report</em>. <a href="https://docs.google.com/document/d/1WwfOFgsPza99H-Qcsi4urJvXX84KJgY8TIAaxPxGrwM/edit?usp=sharing" target="_blank">Link</a></li>
+      <li>Engineering Portfolio Team. (2024). <em>CIV102 Project Team 104 Design Report</em>. <a href="https://docs.google.com/document/d/1WwfOFgsPza99H-Qcsi4urJvXX84KJgY8TIAaxPxGrwM/edit?usp=sharing" target="_blank">Link</a></li>
 
-      <li>Engineering Portfolio Team. (2023). <em>CIV102 Project Team 104 Engineering Assembly</em>. <a href="https://docs.google.com/document/d/1NoNKX7sQ9tpmF8p2Tb1BmkcmbvKHvQkyCFd9dffRwzo/edit?usp=sharing" target="_blank">Link</a></li>
+      <li>Engineering Portfolio Team. (2025). <em>CIV102 Project Team 104 Engineering Assembly</em>. <a href="https://docs.google.com/document/d/1NoNKX7sQ9tpmF8p2Tb1BmkcmbvKHvQkyCFd9dffRwzo/edit?usp=sharing" target="_blank">Link</a></li>
 
-      <li>Onshape. (2023). <em>Onshape CAD Software</em>. Retrieved from <a href="https://www.onshape.com/en/" target="_blank">https://www.onshape.com/en/</a></li>
+      <li>Onshape. (2025). <em>Onshape CAD Software</em>. Retrieved from <a href="https://www.onshape.com/en/" target="_blank">https://www.onshape.com/en/</a></li>
 
-      <li>MathWorks. (2023). <em>MATLAB Software</em>. Retrieved from <a href="https://www.mathworks.com/products/matlab.html" target="_blank">https://www.mathworks.com/products/matlab.html</a></li>
+      <li>MathWorks. (2024). <em>MATLAB Software</em>. Retrieved from <a href="https://www.mathworks.com/products/matlab.html" target="_blank">https://www.mathworks.com/products/matlab.html</a></li>
 
-      <li>Engineering Toolbox. (2023). <em>Steel Density Reference</em>. Retrieved from <a href="https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html" target="_blank">https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html</a></li>
+      <li>Engineering Toolbox. (2024). <em>Steel Density Reference</em>. Retrieved from <a href="https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html" target="_blank">https://www.engineeringtoolbox.com/metal-alloys-densities-d_50.html</a></li>
 
-      <li>MakeItFrom. (2023). <em>Foam Density Reference</em>. Retrieved from <a href="https://www.makeitfrom.com/material-properties/Polyurethane-Foam" target="_blank">https://www.makeitfrom.com/material-properties/Polyurethane-Foam</a></li>
+      <li>MakeItFrom. (2024). <em>Foam Density Reference</em>. Retrieved from <a href="https://www.makeitfrom.com/material-properties/Polyurethane-Foam" target="_blank">https://www.makeitfrom.com/material-properties/Polyurethane-Foam</a></li>
 
-      <li>Industrial Minerals Handbook. (2023). <em>Clay Density Reference</em>.</li>
+      <li>Industrial Minerals Handbook. (2024). <em>Clay Density Reference</em>.Retrieved from <a href="https://www.engineeringtoolbox.com/dirt-mud-densities-d_1727.html" target="_blank">https://www.engineeringtoolbox.com/dirt-mud-densities-d_1727.html</a></li>
   </ul>
 </body>
 </html>
