--- a/praxis-i.html
+++ b/praxis-i.html
@@ -93,6 +93,17 @@
     <p>Through some low fidelity prototypes and pairwise comparison we then had a list of 5 designs, which were then converged upon. Within our various designs we needed to compare them against each other to converge upon a final solution. This measurement matrix in conjecture with a pugh chart helped our team reach one solution. The Clay-Lever chair attachment.</p>
     <p>The Clay-Lever Design is a portable solution that stabilizes uneven chair legs using modeling clay and a quick-release lever. The clay molds around the leg to securely attach the design, while a quick-release lever allows for easy height adjustment, similar to the mechanism used for adjusting bike seats. Now we will take a deeper dive into the CTMF’s we used.</p>
   </div>
+<h2>Reframing</h2>
+<img class="centered-img" src="REFRAME.png" alt="Reframing Visual" />
+<div class="caption">
+  <p>As our understanding of the problem evolved, so did our framing of the stakeholders and design scope. Initially, we identified both UofT Engineering Students and Maintenance Staff as key stakeholders impacted by unstable chairs across campus. However, through further analysis and practicality considerations, we refined our focus to only include UofT students, specifically those in Engineering Science.</p>
+
+  <p>This shift was grounded in the observation that the issue was most prevalent in three specific rooms heavily used by EngSci students. Several such defective chairs have been found in the Engineering Science Common Room in Bahen 2128 (BA 2128), the Engineering and Computer Science Library in Sandford Fleming 2402 (SF 2402), and Chestnut Residence at 89 Chestnut St, all popular student study spaces.</p>
+
+  <p>Additionally, by removing Maintenance Staff as a stakeholder, we acknowledged that relying on their limited availability was neither sustainable nor aligned with the goal of a quick, independent student-centered solution.</p>
+
+  <p>This reframing allowed us to create a more targeted and feasible design brief, with a focus on providing a portable, user-driven solution that could be easily implemented by students themselves in the specific environments most affected.</p>
+</div>
 
   <h2>Brainwriting 6-3-5</h2>
   <div class="caption">
